# pm-mem

./: .env.example  .gitignore  PM-14-16_IMPLEMENTATION_SUMMARY.md  README.md  app.py  config.yaml  import_coordinator.py  local_llm_client.py  memory_manager.py  pyproject.toml  quick-start.md  requirements.txt  role_manager.py  sprint_delivery_report.md  workflow.py  产品重构说明书0430.md
configs/: default.yaml  local.yaml.example
docs/: api.md  architecture.md  config_usage.md  deepseek-api-test-report.md  external_work_import_guide.md  memory_bank_usage.md  memory_entry_usage.md  mock_llm_adapter_usage.md  persistence_usage.md  pm-mem-self-evolving-memory-test-report-kimi.md  pm-mem-self-evolving-memory-test-report-mimo.md  pm-mem-self-evolving-memory-test-report.md  short_drama_usage.md  state_machine_usage.md
docs/reviews/: pm-mem-需求-代码评审报告.md
examples/: basic_usage.py  demo_workflow.py  mock_llm_adapter_example.py
roles/: 一致性校验员.md  分镜师.md  制片人.md  编剧.md
scripts/: run_demo.py  setup_env.sh  update_stories_status.sh
src/: __init__.py  cli.py
src/agent/: __init__.py  prompts.py  remem_agent.py  roles.py  state_machine.py
src/config/: api_key_manager.py  config_manager.py  defaults.yaml
src/llm/: __init__.py  deepseek_client.py  deepseek_client_enhanced.py  deepseek_models.py  kimi_client.py  kimi_client_enhanced.py  kimi_models.py  llm_factory.py  llm_interface.py  llm_interface_enhanced.py  mimo_client.py  mimo_client_enhanced.py  mimo_models.py  mock_llm.py  mock_llm_enhanced.py  retry_mechanism.py
src/memory/: __init__.py  bank.py  editor.py  entry.py  llm_retrieval.py  persistence.py  retrieval_result.py  schema.py  stores.py
src/prompts/: __init__.py  prompt_builder.py  template_engine.py  template_engine_enhanced.py  template_engine_enhanced_fixed.py  template_manager.py  template_manager_enhanced.py  template_manager_enhanced_fixed.py  validators.py
src/utils/: logger.py  validators.py
tests/: test_app_api.py  test_external_work_import_api.py  test_llm_retrieval_api.py  test_local_llm_client.py  test_markdown_memory_manager.py  test_memory_bank.py  test_memory_entry.py  test_persistence.py
tests/integration/: test_remem_workflow.py  test_short_drama_workflow.py
tests/unit/: test_agent.py  test_edit_traces.py  test_enhanced_bank.py  test_enhanced_editor.py  test_enhanced_retrieval.py  test_llm.py  test_llm_factory.py  test_memory.py  test_pm111_prompt_template.py  test_pm112_score_validation.py  test_pm113_json_parser.py  test_pm86_deepseek_client.py  test_pm95_api_key_manager.py  test_state_machine.py
works/: works_index.yaml
works/0d739ac8-d569-43d5-8494-6eb1f04a6404/: .work_config.yaml  01_作品元数据层.md  02_核心设定层.md  03_人物档案层.md  04_情节脉络层.md  05_剧本档案层.md  06_分镜档案层.md
works/337f0098-09cb-42f5-a862-920a60995556/: .work_config.yaml  01_作品元数据层.md  02_核心设定层.md  03_人物档案层.md  04_情节脉络层.md  05_剧本档案层.md  06_分镜档案层.md
(+31 files in other folders)
