[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-mem"
version = "0.1.0"
description = "LLM长短记忆管理系统 - 基于ReMem方法论的自演化记忆Agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Context Engineering Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "openai>=1.12.0,<1.14.0",
    "pyyaml>=6.0",
    "structlog>=23.0.0",
    "python-dotenv>=0.21.0,<0.22.0",
    "fastapi>=0.103.0,<0.104.0",
    "uvicorn>=0.22.0,<0.23.0",
]

[project.urls]
Homepage = "https://github.com/your-org/pm-mem"
Repository = "https://github.com/your-org/pm-mem"
Issues = "https://github.com/your-org/pm-mem/issues"

[project.scripts]
pm-mem = "src.cli:main"
